--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -53,8 +53,146 @@
                                                 <button onclick="location.href='/docs/1.zip'" style="color: #f2f3f3;
                                     background-color: #4caf50;
                                     border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
-                                                    Договор
+                                                    Инструкции
                                                 </button>
+
+
+
+
+
+
+
+
+                                                <p> Портфель №1 «Фондовый»</p>
+                                                <p>Портфель №1 «Фондовый» создан для инвесторов, которые знакомы или хотя бы раз слышали понятие «Фондовый рынок» и «Биржа».</p>
+                                                <p>Наши трейдеры приумножают Ваш депозит за счет совершения спекулятивных сделок на фондовом рынке таких базовых активов как фьючерсные контракты на нефть марки «Brent», индекс РТС, ММВБ, фьючерсы на валютные пары доллар/рубль, евро/доллар, акции Сбербанка                   и другие инструменты.</p>
+                                                <p>Кроме этого, в среднесрочной и долгосрочной стратегии мы применяем «структурные портфели», состоящие из ликвидных акций голубых фишек, акций первого эшелона и на наш взгляд особо перспективных активов                 на классическом фондовом рынке, совмещая их с фьючерсными контрактами, но придерживаясь стратегии прежде всего сохранения депозита  </p>                                          и максимально-безопасного его приумножения.
+                                                <p> Важно помнить, что преобладающее большинство сделок в данном продукте проводится на срочном рынке (примерное соотношение 30/70                        в пользу фьючерсов), так как это наиболее интересный на наш взгляд рынок для приумножения и разгона депозитов, поэтому риски несколько выше, чем при классической торговле акциями.</p>
+                                                <p> В нашей торговой системе при открытии сделок трейдер в обязательном порядке, всегда выставляет «стоп-лоссы», поэтому потери минимальны, а вероятность заработать значительно выше, благодаря имеющемуся опыту и наличию в команде GBB настоящих профессионалов трейдеров и аналитиков.</p>
+                                                <p> Наш проект выступает партнером брокера ООО «Компания БКС» и помогает Вам открывать счета в системе указанного брокера.</p>
+
+                                                <p>•	Вход на рынок от 100 $ (когда один фьючерсный контракт может превышать эту сумму в несколько раз). Это возможно благодаря созданию пула инвесторов.</p>
+                                                <p>•	Вам не нужно тратить время на обучение трейдингу и практику</p>
+                                                <p>•	Работа с ликвидными инструментами и российским брокером</p>
+                                                <p>•	Брокер выступает налоговым агентом, поэтому налогообложение Вас не будет касаться</p>
+                                                <p>•	Уникальная торговая система, показывающая хорошие результаты</p>
+
+
+
+
+
+
+
+
+                                                <p> Основные характеристики</p>
+
+
+                                                <table class="table table-bordered table-dark">
+                                                    <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Основные характеристики портфеля №1 </th>
+                                                        <th scope="col">Показатели</th>
+
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>Доходность</td>
+                                                        <td>до 10-25% - месяц</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Риск</td>
+                                                        <td>до 15-25 % от депо</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>Минимальная сумма входа</td>
+                                                        <td>100$</td>
+
+                                                    </tr>
+
+
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>Частота выплат</td>
+                                                        <td>сразу</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>Минимальный срок работы портфеля</td>
+                                                        <td>любой </td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Вывод тела депозита</td>
+                                                        <td>да</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Стратегия инвестирования</td>
+                                                        <td>Cреднесрочная и долгосрочная</td>
+
+                                                    </tr>
+
+                                                    </tbody>
+                                                </table>
+
+
+
+
+
+
+
+
+
+
+
+                                                <p> Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
+                                                <p> •	При сумме депозита до 10 000$ - 30/70%, где 70%-полагается инвестору;</p>
+                                                <p> •	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
+                                                <p> •	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
+                                                <p> При этом, при ВАРИАНТЕ регистрации №1 комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
+                                                <p> Как зарегистрироваться в Портфель №1 «Фондовый» (ссылка)</p>
+                                                <p>Как пополнить Портфель №2 «IPO»</p>
+                                                <p> Для  Варианта №1 – (ссылка ШАГ № 6)</p>
+                                                <p>ШАГ №1 ПОПОЛНИТЕ БРОКЕРСКИЙ СЧЕТ</p>
+                                                <p>Бесплатно переведите деньги с карты «Брокер» в личном кабинете «БКС Онлайн»</p>
+                                                <p>Через кассы БКС</p>
+                                                <p>Безналичным переводом по реквизитам со счета любого банка</p>
+                                                <p>В приложении «Мой брокер»  2,5% комиссия и лимит 100 000 рублей в месяц</p>
+                                                <p>Будьте внимательны: в других банках возможно взимание комиссии за перевод на брокерский счет компании БКС.</p>
+                                                <p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY? (ссылка Как оплатить DUTY).</p>
+                                                <p> Для Варианта №2</p>
+                                                <p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут (ссылка как пополнить баланс личного кабинета).</p>
+                                                <p> Далее отправить денежные средства с личного счета в Портфель №1, нажав кнопку портфеля и указав сумму перевода. После этого, инвестированная сумма отображается в Портфеле №1-Ф.</p>
+                                                <p>Начисление доходности происходит в личный кабинет не реже 1 раза в месяц с 1-5 число месяца, следующего за отчетным. Вывести денежные средства можно сразу же через обратную форму, указав способ вывода (реквизиты).</p>
+                                                <p>Примечание: Внимание! Начисление доходности и отчетный период будут исчисляться всегда с 1-го числа месяца, независимо от даты пополнения счета.</p>
+                                                <p>При зачислении депозита, системой автоматически оплачивается членский взнос «DUTY».</p>
+                                                <p>Отчетный период наступает по истечении месяца, либо по выходу каких-либо первичных акций на рынок.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
