--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -345,6 +345,27 @@
                 {#</li><!--end /menu-li -->#}
                 {#<!-- END UI -->#}
 
+
+
+
+
+
+
+                <!-- BEGIN TABLES -->
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><i class="fa fa-table"></i></div>
+                        <span class="title">О компании</span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a href="/about">Global Big Bell</a></li>
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
+                <!-- END TABLES -->
+
+
+
                 <!-- BEGIN TABLES -->
                 <li class="gui-folder">
                     <a>
@@ -395,21 +416,24 @@
                         <li><a  target="_blank" href=" https://my.broker.ru/login/" ><span class="title">Broker</span></a></li>
                         <li><a target="_blank" href="https://payeer.com" ><span class="title">Payeer</span></a></li>
 
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
 
 
-                        <li class="gui-folder">
-                            <a>
-                                <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
-                                <span class="title">Инструкции</span>
-                            </a>
-                            <!--start submenu -->
-                            <ul>
-                                <li><a  target="_blank" href="/docs/1.docx" title="Зарегистрироваться в Портфеле №1-Фондовый.docx" ><span class="title">Зарегистрироваться в Портфеле №1-Фондовый.docx</span></a></li>
-                                <li><a target="_blank" href="/docs/2.docx" title="Сгенерировать ключи в Quik.docx" ><span class="title">Сгенерировать ключи в Quik.docx</span></a></li>
-                                <li><a target="_blank" href="/docs/3.doc" title="Установка Quik.doc"><span class="title">Установка Quik.doc</span></a></li>
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
+                        <span class="title">Инструкции</span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a  target="_blank" href="/docs/1.docx" > Зарегистрироваться в Портфеле №1-Фондовый.docx </a></li>
+                        <li><a target="_blank" href="/docs/2.docx"  > Сгенерировать ключи в Quik.docx</a></li>
+                        <li><a target="_blank" href="/docs/3.doc"  > Установка Quik.doc </a></li>
+                        <li><a target="_blank" href="/docs/referral_program.docx" title="referral_program.docx"> Реферальная программа .docx</a></li>
+                        <li><a target="_blank" href="/docs/Instructions_How_to_pay_DUTY.docx" title="referral_program.docx"> Инструкция Как оплатить DUTY .docx</a></li>
 
-                            </ul><!--end /submenu -->
-                        </li><!--end /menu-li -->
+
                     </ul><!--end /submenu -->
                 </li><!--end /menu-li -->
 
@@ -417,6 +441,24 @@
 
 
 
+
+
+
+
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
+                        <span class="title">Услуги Клиентам </span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a href="/services/individual-management">Индивидуальное доверительное управление</a></li>
+                        <li><a href="/services/robotic-trading">Роботизированная торговля</a></li>
+                        <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
+                        <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Тайланда</a></li>
+                        <li><a href="/services/cars">Доходные автомобили Тайланда</a></li>
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
 
 
 
