--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -1,39 +1,39 @@
-{% extends 'index/base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
-{% block body %}
+{#{% block body %}#}
 
 
 
-    <!-- Section: intro -->
-    <section id="intro" class="intro">
+    {#<!-- Section: intro -->#}
+    {#<section id="intro" class="intro">#}
 
-        <div class="slogan">
-            <h2>О НАС</h2>
-            <h4>GLOBAL BIG BELL</h4>
+        {#<div class="slogan">#}
+            {#<h2>О НАС</h2>#}
+            {#<h4>GLOBAL BIG BELL</h4>#}
             {#<h4>Мы являемся экспертами в области аналитики и инвестирования в различные#}
                 {#современные финансовые инструменты, включая высокодоходные.</h4>#}
-        </div>
-        <div class="page-scroll">
-            <a href="#about" class="btn btn-circle">
-                <i class="fa fa-angle-double-down animated"></i>
-            </a>
-        </div>
-    </section>
-    <!-- /Section: intro -->
+        {#</div>#}
+        {#<div class="page-scroll">#}
+            {#<a href="#about" class="btn btn-circle">#}
+                {#<i class="fa fa-angle-double-down animated"></i>#}
+            {#</a>#}
+        {#</div>#}
+    {#</section>#}
+    {#<!-- /Section: intro -->#}
 
 
 
 
-    <style>
-        .div-col-md-background{
-            background: #e5e6e6; /* Цвет фона */
-            color: #000; /* Цвет текста */
-            padding: 10px; /* Поля вокруг текста */
-            border-radius: 5px; /* Уголки */
-            margin-top: 43px;
-            padding-bottom: 22px;padding-top: 22px;
-        }
-    </style>
+    {#<style>#}
+        {#.div-col-md-background{#}
+            {#background: #e5e6e6; /* Цвет фона */#}
+            {#color: #000; /* Цвет текста */#}
+            {#padding: 10px; /* Поля вокруг текста */#}
+            {#border-radius: 5px; /* Уголки */#}
+            {#margin-top: 43px;#}
+            {#padding-bottom: 22px;padding-top: 22px;#}
+        {#}#}
+    {#</style>#}
 
 
     {#<div class="text-center section py-5">#}
@@ -97,41 +97,229 @@
 
 
 
-<div class="text-center section py-5">
-    <div class="container">
+{#<div class="text-center section py-5">#}
+    {#<div class="container">#}
 
-        <div class="row">
-            <div class="col-md-12 div-col-md-background">
-                <div id="about"><h4>Global Big Bell</h4></div>
+        {#<div class="row">#}
+            {#<div class="col-md-12 div-col-md-background">#}
+                {#<div id="about"><h4>Global Big Bell</h4></div>#}
 
-                <p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>
-                <p>Описание</p>
-                <p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>
-                <p>Отличия от других проектов</p>
-                <p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>
-                <p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>
-                <p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>
-                <p>Страхование капитала.</p>
-                <p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>
-                <p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>
+                {#<p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>#}
+                {#<p><b>Описание</b></p>#}
+                {#<p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>#}
+                {#<p><b>Отличия от других проектов</b></p>#}
+                {#<p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>#}
+                {#<p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>#}
+                {#<p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>#}
+                {#<p><b>Страхование капитала.</b></p>#}
+                {#<p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>#}
+                {#<p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>#}
 
 
-                <p>Какие финансовые инструменты мы используем в своей работе?</p>
-                <p>В составе наших портфелей используются такие инструменты, как:</p>
-                <p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>
+                {#<p>Какие финансовые инструменты мы используем в своей работе?</p>#}
+                {#<p>В составе наших портфелей используются такие инструменты, как:</p>#}
+                {#<p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>#}
 
-                <p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>
+                {#<p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>#}
 
-                <p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>
-                <p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>
-                <p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>
-                <p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>
-                <p>Будущее финансовой безопасности и процветания.</p>
+                {#<p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>#}
+                {#<p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>#}
+                {#<p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>#}
+                {#<p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>#}
+                {#<p>Будущее финансовой безопасности и процветания.</p>#}
+            {#</div>#}
+
+        {#</div>#}
+    {#</div>#}
+{#</div>#}
+
+    {#<br/><br/><br/><br/>#}
+{#{% endblock %}#}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% block body %}
+
+
+
+    {#<!-- Section: intro -->#}
+    {#<section id="intro" class="intro">#}
+
+        {#<div class="slogan">#}
+            {#<h2>О НАС</h2>#}
+            {#<h4>GLOBAL BIG BELL</h4>#}
+            {#<h4>Мы являемся экспертами в области аналитики и инвестирования в различные#}
+            {#современные финансовые инструменты, включая высокодоходные.</h4>#}
+        {#</div>#}
+        {#<div class="page-scroll">#}
+            {#<a href="#about" class="btn btn-circle">#}
+                {#<i class="fa fa-angle-double-down animated"></i>#}
+            {#</a>#}
+        {#</div>#}
+    {#</section>#}
+    {#<!-- /Section: intro -->#}
+
+
+
+
+    {#<style>#}
+        {#.div-col-md-background{#}
+            {#background: #e5e6e6; /* Цвет фона */#}
+            {#color: #000; /* Цвет текста */#}
+            {#padding: 10px; /* Поля вокруг текста */#}
+            {#border-radius: 5px; /* Уголки */#}
+            {#margin-top: 43px;#}
+            {#padding-bottom: 22px;padding-top: 22px;#}
+        {#}#}
+    {#</style>#}
+
+ {##}
+
+
+
+
+
+    {#<div class="text-center section py-5">#}
+        {#<div class="container">#}
+
+            {#<div class="row">#}
+                {#<div class="col-md-12 div-col-md-background">#}
+                    {#<div id="about"><h4>Global Big Bell</h4></div>#}
+
+                    {#<p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>#}
+                    {#<p><b>Описание</b></p>#}
+                    {#<p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>#}
+                    {#<p><b>Отличия от других проектов</b></p>#}
+                    {#<p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>#}
+                    {#<p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>#}
+                    {#<p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>#}
+                    {#<p><b>Страхование капитала.</b></p>#}
+                    {#<p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>#}
+                    {#<p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>#}
+
+
+                    {#<p>Какие финансовые инструменты мы используем в своей работе?</p>#}
+                    {#<p>В составе наших портфелей используются такие инструменты, как:</p>#}
+                    {#<p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>#}
+
+                    {#<p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>#}
+
+                    {#<p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>#}
+                    {#<p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>#}
+                    {#<p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>#}
+                    {#<p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>#}
+                    {#<p>Будущее финансовой безопасности и процветания.</p>#}
+                {#</div>#}
+
+            {#</div>#}
+        {#</div>#}
+    {#</div>#}
+
+    {#<br/><br/><br/><br/>#}
+
+
+
+
+
+
+
+
+
+    <!-- BEGIN OFFCANVAS LEFT -->
+    <div class="offcanvas">
+    </div><!--end .offcanvas-->
+    <!-- END OFFCANVAS LEFT -->
+
+
+
+    <!-- BEGIN PROFILE HEADER -->
+    {#<section class="full-bleed">#}
+        {#<div class="section-body style-default-dark force-padding text-shadow">#}
+            {#<div class="img-backdrop" style="background-image: url('/main/img/Cap-Dep-3.jpg')"></div>#}
+            {#<div class="overlay overlay-shade-top stick-top-left height-3"></div>#}
+            {#<div class="row">#}
+                {#<div class="col-md-3 col-xs-5">#}
+                    {#<h3> Мой профиль </h3> <br/>#}
+                {#</div><!--end .col -->#}
+            {#</div><!--end .row -->#}
+        {#</div><!--end .section-body -->#}
+    {#</section>#}
+    <!-- END PROFILE HEADER  -->
+
+    <section>
+        <div class="section-body no-margin">
+            <div class="row">
+                <div class="">
+                    <!-- BEGIN ENTER MESSAGE -->
+                    <div class="form">
+                        <div class="card no-margin">
+                            <div class="card-body">
+                                <div class="form-group floating-label">
+                                    <!-- ======================================= -->
+
+
+
+                                                    <div id="about"><h4>Global Big Bell</h4></div>
+
+                                                    <p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>
+                                                    <p><b>Описание</b></p>
+                                                    <p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>
+                                                    <p><b>Отличия от других проектов</b></p>
+                                                    <p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>
+                                                    <p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>
+                                                    <p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>
+                                                    <p><b>Страхование капитала.</b></p>
+                                                    <p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>
+                                                    <p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>
+
+
+                                                    <p>Какие финансовые инструменты мы используем в своей работе?</p>
+                                                    <p>В составе наших портфелей используются такие инструменты, как:</p>
+                                                    <p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>
+
+                                                    <p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>
+
+                                                    <p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>
+                                                    <p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>
+                                                    <p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>
+                                                    <p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>
+                                                    <p>Будущее финансовой безопасности и процветания.</p>
+
+                                    <!-- ======================================= -->
+                                </div>
+                            </div><!--end .card-body -->
+                        </div><!--end .card -->
+                    </div>
+                </div>
             </div>
-
         </div>
-    </div>
-</div>
+    </section>
 
-    <br/><br/><br/><br/>
+
+
+
+
+
+
+
 {% endblock %}
+
+
+
+
+
+
+
+
+
