--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -28,6 +28,11 @@
                     <label class="form-control"   class="form-control" for="remember_me">Запомни меня</label>
                 </div>
                 <input class="btn btn-primary btn-raised"   class="form-control" type="submit" id="_submit" name="_submit" value="{{ 'вход'|trans }}" />
+
+
+
+                <a style="color: #0a6ebd" href="/register/"> Регистрация </a>
+
             </form>
         </div>
     </div>
